# rclone-mount-tray

./: .gitignore  AGENTS.md  Cargo.toml  QUICK_START.md  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
data/: rclone-mount-tray.desktop  rclone-mount-tray.service
debian/: changelog  control  rules
docs/: _config.yml
rclone-config-manager/: Cargo.toml  EVENT_HANDLERS.md  GTK4_SETUP.md  README.md
rclone-config-manager/assets/: style.css
rclone-config-manager/data/: rclone-config-manager.desktop
rclone-config-manager/src/: lib.rs  main.rs
rclone-config-manager/src/auth/: mod.rs
rclone-config-manager/src/config/: mod.rs
rclone-config-manager/src/models/: mod.rs
rclone-config-manager/src/services/: mod.rs
rclone-config-manager/src/ui/: dialogs.rs  mod.rs  widgets.rs
scripts/: build-deb.sh
src/: main.rs  mount_manager.rs  systemd_manager.rs  tray_ui.rs
