[package]
name = "rclone-config-manager"
version = "0.1.0"
edition = "2021"
authors = ["RClone Config Manager Contributors"]
description = "GTK4 GUI application for managing rclone mount configurations"
license = "MIT"

[dependencies]
# GTK4 GUI framework (optional, enabled by default)
gtk4 = { version = "0.8", features = ["v4_10"], optional = true }
libadwaita = { version = "0.6", features = ["v1_5"], optional = true }

# Async runtime
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "fs", "process"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration management
ini = "1.3"

# HTTP client for OAuth
reqwest = { version = "0.11", features = ["json"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File operations
dirs = "5.0"
tempfile = "3.8"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
regex = "1.10"
urlencoding = "2.1"

[features]
default = ["gui"]
# GUI feature - requires GTK4 and libadwaita system libraries
gui = ["gtk4", "libadwaita"]
# CLI-only feature - no GUI dependencies
cli = []
